Fixes #1904 ClayCSS Base Pagination use negative margin on `.page-item` instead of `.page-link` so pagination links using `button` don't have double borders
Fixes #1904 ClayCSS Base Pagination active `z-index` should have priority over hover and focus `z-index` should have priority over active

Fixes #1904 ClayCSS Atlas Pagination `.page-item` should have more space between items so focus styles don't appear too close to an active item

--- a/packages/clay-css/src/scss/atlas/variables/_pagination.scss
+++ b/packages/clay-css/src/scss/atlas/variables/_pagination.scss
@@ -4,7 +4,7 @@ $pagination-line-height: 1 !default;
 // Pagination Item
 
 $pagination-item-height: 2rem !default; // 32px
-$pagination-item-margin-x: 0.125rem !default;
+$pagination-item-margin-x: 0.25rem !default; // 4px
 
 // Pagination Link
 
